<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <name>eLicence</name>
  <groupId>net.eiroca</groupId>
  <artifactId>eLicence</artifactId>
  <version>1.11.2</version>
  <packaging>pom</packaging>
  <organization>
    <name>net.eiroca</name>
    <url>www.eiroca.net</url>
  </organization>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jdk.version>11</jdk.version>
    <!-- library internal  -->
    <cavour.version>0.0.1</cavour.version>
    <eJDBCDrivers.version>1.${jdk.version}.2</eJDBCDrivers.version>
    <eLib.version>1.${jdk.version}.2</eLib.version>
    <eLicense.version>1.${jdk.version}.2</eLicense.version>
    <!-- library external  -->
    <activemq.version>5.7.0</activemq.version>
    <asynchbase.version>1.8.2</asynchbase.version>
    <avro.version>1.11.4</avro.version>
    <bundle-plugin.version>2.3.7</bundle-plugin.version>
    <checkstyle.tool.version>8.45.1</checkstyle.tool.version>
    <codehaus.jackson.version>1.9.13</codehaus.jackson.version>
    <commons-cli.version>1.11.0</commons-cli.version>
    <commons-codec.version>1.22.0</commons-codec.version>
    <commons-collections.version>3.2.2</commons-collections.version>
    <commons-compress.version>1.27.1</commons-compress.version>
    <commons-dbcp.version>2.13.0</commons-dbcp.version>
    <commons-io.version>2.18.0</commons-io.version>
    <commons-lang3.version>3.20.0</commons-lang3.version>
    <commons-logging.version>1.2</commons-logging.version>
    <commons-text.version>1.15.0</commons-text.version>
    <curator.version>5.7.1</curator.version>
    <derby.version>10.17.1.0</derby.version>
    <dropwizard-metrics.version>4.1.18</dropwizard-metrics.version>
    <elasticsearch.version>0.90.1</elasticsearch.version>
    <external.protobuf.version>2.5.0</external.protobuf.version>
    <fasterxml.jackson.databind.version>2.13.2.1</fasterxml.jackson.databind.version>
    <fasterxml.jackson.version>2.13.2</fasterxml.jackson.version>
    <fest-reflect.version>1.4</fest-reflect.version>
    <findbugs.version>3.0.1</findbugs.version>
    <freemarker.version>2.3.34</freemarker.version>
    <geronimo-jms.version>1.1.1</geronimo-jms.version>
    <googleauth.version>1.5.0</googleauth.version>
    <gson.version>2.14.0</gson.version>
    <guava.version>33.6.0-jre</guava.version>
    <hadoop.version>3.2.2</hadoop.version>
    <hadoop3.version>3.2.2</hadoop3.version>
    <hbase.version>2.5.3-hadoop3</hbase.version>
    <hbase2.jetty.version>9.3.29.v20201019</hbase2.jetty.version>
    <hbase2.version>2.5.3-hadoop3</hbase2.version>
    <hibernate.version>5.6.14.Final</hibernate.version>
    <hive.version>3.1.2</hive.version>
    <httpclient5.version>5.6.1</httpclient5.version>
    <httpcore5.version>5.3.1</httpcore5.version>
    <httpclient.version>4.5.14</httpclient.version>
    <io.javalin.version>6.4.0</io.javalin.version>
    <ipaddress.version>5.6.2</ipaddress.version>
    <irclib.version>1.10</irclib.version>
    <jackson.version>1.9.13</jackson.version>
    <jcifs-ng.version>2.1.10</jcifs-ng.version>
    <jdom.version>1.1.3</jdom.version>
    <jedis.version>7.5.2</jedis.version>
    <jersey.version>1.8</jersey.version>
    <jetty.version>9.4.51.v20230217</jetty.version>
    <joda-time.version>2.9.9</joda-time.version>
    <json.version>20260522</json.version>
    <junit.version>4.13.2</junit.version>
    <kafka.version>2.3.1</kafka.version>
    <kite.version>1.1.0</kite.version>
    <kudu.version>1.10.0</kudu.version>
    <languagetool.version>5.9</languagetool.version> <!-- max ver. -->
    <lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
    <log4j.version>2.26.0</log4j.version>
    <mapdb.version>0.9.9</mapdb.version>
    <mina.version>2.1.10</mina.version>
    <mockito.version>1.9.0</mockito.version>
    <netty.version>4.1.116.Final</netty.version>
    <os.maven.version>1.5.0.Final</os.maven.version>
    <parquet.version>1.11.2</parquet.version>
    <poi.version>5.5.1</poi.version>
    <prometheus.version>0.15.0</prometheus.version>
    <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
    <protobuf.version>2.5.0</protobuf.version>
    <rat.version>0.12</rat.version>
    <re2j.version>1.8</re2j.version>
    <scala-library.version>2.13.9</scala-library.version>
    <scala.version>2.13</scala.version>
    <slf4j1.version>1.7.36</slf4j1.version>
    <slf4j2.version>2.0.18</slf4j2.version>
    <slf4j.version>2.0.18</slf4j.version>
    <snappy-java.version>1.1.8.4</snappy-java.version>
    <soa-model-core.version>1.6.4</soa-model-core.version> <!-- max ver. -->
    <solr-global.version>4.3.0</solr-global.version>
    <system-rules.version>1.19.0</system-rules.version>
    <thrift.version>0.14.2</thrift.version>
    <trilead-ssh2.version>1.0.0-build222</trilead-ssh2.version>
    <twitter-source.version>2.0.0</twitter-source.version>
    <twitter4j.version>3.0.3</twitter4j.version>
    <univocityparser.version>2.9.1</univocityparser.version>
    <wiremock.version>1.53</wiremock.version>
    <xalan.version>2.7.2</xalan.version>
    <xerces.version>2.9.1</xerces.version>
    <zlib.version>1.1.3</zlib.version>
    <zookeeper.version>3.6.2</zookeeper.version>
    <!-- library Backward compatibility -->
    <javax.xml.soap.version>1.4.0</javax.xml.soap.version>
    <javax.xml.ws.version>2.3.1</javax.xml.ws.version>
    <javax.activation.version>1.2.0</javax.activation.version>
    <!-- library external (deprecated) -->
    <spark.version>2.9.4</spark.version>
    <flume.version>1.7.0</flume.version>
    <!-- drivers -->
    <postgresql.version>42.7.11</postgresql.version>
    <sqlserver.version>13.4.0.jre11</sqlserver.version>
    <mysql.version>9.7.0</mysql.version>
    <ingres.version>10.2-4.1.10</ingres.version>
    <mongodb.version>3.12.14</mongodb.version>
    <db2.version>12.1.4.0</db2.version>
    <oracle.version>23.26.2.0.0</oracle.version>
    <!-- maven  -->
    <mvn-antrun-plugin.version>1.8</mvn-antrun-plugin.version>
    <mvn-assembly-plugin.version>3.2.0</mvn-assembly-plugin.version>
    <mvn-build-helper-plugin>3.0.0</mvn-build-helper-plugin>
    <mvn-checkstyle-plugin.version>3.1.2</mvn-checkstyle-plugin.version>
    <mvn-checksum-plugin.version>1.7</mvn-checksum-plugin.version>
    <mvn-clean-plugin.version>3.1.0</mvn-clean-plugin.version>
    <mvn-compiler-plugin.version>3.13.0</mvn-compiler-plugin.version>
    <mvn-dependency-plugin.version>3.8.1</mvn-dependency-plugin.version>
    <mvn-deploy-plugin.version>2.8.2</mvn-deploy-plugin.version>
    <mvn-gpg-plugin.version>1.6</mvn-gpg-plugin.version>
    <mvn-jar-plugin.version>3.4.2</mvn-jar-plugin.version>
    <mvn-javadoc-plugin.version>3.2.0</mvn-javadoc-plugin.version>
    <mvn-paranamer-plugin.version>2.8</mvn-paranamer-plugin.version>
    <mvn-pmd-plugin.version>3.15.0</mvn-pmd-plugin.version>
    <mvn-site-plugin.version>3.9.0</mvn-site-plugin.version>
    <mvn-spotbugs-plugin.version>4.2.0</mvn-spotbugs-plugin.version>
    <mvn-surefire-plugin.version>3.5.2</mvn-surefire-plugin.version>
    <mvn-versions-plugin.version>2.21.0</mvn-versions-plugin.version>
    <!-- compile & test  -->
    <junit.version>4.13.2</junit.version>
    <servlet.version>3.1.0</servlet.version>
    <maven.compiler.source>${jdk.version}</maven.compiler.source>
    <maven.compiler.target>${jdk.version}</maven.compiler.target>
  </properties>
  <build>
    <finalName>${project.artifactId}-${project.version}</finalName>
    <plugins>
      <!-- Set a JDK compiler level -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${mvn-compiler-plugin.version}</version>
        <configuration>
          <source>${jdk.version}</source>
          <target>${jdk.version}</target>
        </configuration>
      </plugin>
      <!-- Make the jar -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${mvn-jar-plugin.version}</version>
        <configuration>
          <!-- DO NOT include log4j.properties file in your Jar -->
          <excludes>
            <exclude>**/log4j.properties</exclude>
            <exclude>**/simplelogger.properties</exclude>
            <exclude>**/placeholder</exclude>
          </excludes>
          <archive>
            <addMavenDescriptor>false</addMavenDescriptor>
            <manifest>
              <addDefaultEntries>false</addDefaultEntries>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              <addDefaultSpecificationEntries>false</addDefaultSpecificationEntries>
              <addBuildEnvironmentEntries>false</addBuildEnvironmentEntries>
              <addClasspath>true</addClasspath>
              <classpathPrefix>libs/</classpathPrefix>
            </manifest>
            <manifestEntries>
              <Build-Jdk>${jdk.version}</Build-Jdk>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <!-- Copy project dependency -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>${mvn-dependency-plugin.version}</version>
        <executions>
          <execution>
            <?m2e ignore?>
            <id>copy-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <!-- exclude junit, we need runtime dependency only -->
              <includeScope>runtime</includeScope>
              <outputDirectory>${project.build.directory}/libs/</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- Unit test surefire -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${mvn-surefire-plugin.version}</version>
      </plugin>
      <!-- Version dependency check - versions:display-dependency-updates -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <version>${mvn-versions-plugin.version}</version>
        <configuration>
          <!-- Ignore unstable versions globally -->
          <ignoredVersions>
            <ignoredVersion>.*-M.*</ignoredVersion>
            <ignoredVersion>.*-alpha.*</ignoredVersion>
            <ignoredVersion>.*-beta.*</ignoredVersion>
          </ignoredVersions>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <modules>
    <module>eLicence-API</module>
    <module>eLicence-Server</module>
    <module>LicenseTool</module>
    <module>BulkGenerator</module>
  </modules>
</project>